[package]
name = "fuzz_with_emus"
version = "0.1.0"
authors = ["Brandon Falk <bfalk@gamozolabs.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
falkhash = { path = "shared/falkhash" }
aht = { path = "shared/aht" }
atomicvec = { path = "shared/atomicvec" }
basic_mutator = { path = "../mutator" }

[profile.release]
overflow-checks=true

